SonarCube induced changes